@@ -31,4 +31,6 @@ col_enum = gen.enum( [
 
 gen.add("collision_type", int_t, 0, "Collision", 0, 0, 2, edit_method=col_enum)
 
+gen.add('initialize',   bool_t,   0, 'Initialize',        False)
+
 exit(gen.generate(PACKAGE, 'simple_sim', 'SimpleSim'))
