@@ -21,7 +21,6 @@ generate_dynamic_reconfigure_options(
   cfg/BarrelDynCfg.cfg
   cfg/BarrelLidarDynCfg.cfg
   cfg/LineFollowDynCfg.cfg
-  cfg/LaneCenterDynCfg.cfg
 )
 
 catkin_package(
