@@ -1,0 +1,18 @@
+#!/usr/bin/env python
+PACKAGE = "workshop"
+
+from dynamic_reconfigure.parameter_generator_catkin import *
+
+gen = ParameterGenerator()
+
+gen.add('debug',             bool_t,  0, 'Debug',               False)
+
+gen.add('img_threshold',     int_t,   0, 'Image Threshold',     1,   1,  255)
+
+gen.add('window_width',    double_t,  0, 'Width',     0.5,   0,    1)
+gen.add('window_height',   double_t,  0, 'Height',    0.5,   0,    1)
+gen.add('x_pos',           double_t,  0, 'X Pos',     0.5,   0,    1)
+gen.add('y_pos',           double_t,  0, 'Y Pos',     0.5,   0,    1)
+
+
+exit(gen.generate(PACKAGE, "workshop", "LaneCenterDynCfg"))
